website: regenerate reference manual for v0.9.0

--- a/website/_includes/0.reference-manual.md
+++ b/website/_includes/0.reference-manual.md
@@ -1,171 +1,6 @@
 # LuaRadio Reference Manual
 
-Generated from LuaRadio `v0.8.0`.
-
-## Table of contents
-
-* [Example](#example)
-* [Running](#running)
-    * [`luaradio` runner](#luaradio-runner)
-    * [Environment Variables](#environment-variables)
-* [Blocks](#blocks)
-    * [Composition](#composition)
-        * [CompositeBlock](#compositeblock)
-    * [Sources](#sources)
-        * [AirspyHFSource](#airspyhfsource)
-        * [AirspySource](#airspysource)
-        * [HackRFSource](#hackrfsource)
-        * [IQFileSource](#iqfilesource)
-        * [JSONSource](#jsonsource)
-        * [NetworkClientSource](#networkclientsource)
-        * [NetworkServerSource](#networkserversource)
-        * [PortAudioSource](#portaudiosource)
-        * [PulseAudioSource](#pulseaudiosource)
-        * [RawFileSource](#rawfilesource)
-        * [RealFileSource](#realfilesource)
-        * [RtlSdrSource](#rtlsdrsource)
-        * [SDRplaySource](#sdrplaysource)
-        * [SignalSource](#signalsource)
-        * [SoapySDRSource](#soapysdrsource)
-        * [UHDSource](#uhdsource)
-        * [UniformRandomSource](#uniformrandomsource)
-        * [WAVFileSource](#wavfilesource)
-        * [ZeroSource](#zerosource)
-    * [Sinks](#sinks)
-        * [BenchmarkSink](#benchmarksink)
-        * [GnuplotPlotSink](#gnuplotplotsink)
-        * [GnuplotSpectrumSink](#gnuplotspectrumsink)
-        * [GnuplotWaterfallSink](#gnuplotwaterfallsink)
-        * [GnuplotXYPlotSink](#gnuplotxyplotsink)
-        * [HackRFSink](#hackrfsink)
-        * [IQFileSink](#iqfilesink)
-        * [JSONSink](#jsonsink)
-        * [NetworkClientSink](#networkclientsink)
-        * [NetworkServerSink](#networkserversink)
-        * [NopSink](#nopsink)
-        * [PortAudioSink](#portaudiosink)
-        * [PrintSink](#printsink)
-        * [PulseAudioSink](#pulseaudiosink)
-        * [RawFileSink](#rawfilesink)
-        * [RealFileSink](#realfilesink)
-        * [SoapySDRSink](#soapysdrsink)
-        * [UHDSink](#uhdsink)
-        * [WAVFileSink](#wavfilesink)
-    * [Filtering](#filtering)
-        * [BandpassFilterBlock](#bandpassfilterblock)
-        * [BandstopFilterBlock](#bandstopfilterblock)
-        * [ComplexBandpassFilterBlock](#complexbandpassfilterblock)
-        * [ComplexBandstopFilterBlock](#complexbandstopfilterblock)
-        * [FIRFilterBlock](#firfilterblock)
-        * [FMDeemphasisFilterBlock](#fmdeemphasisfilterblock)
-        * [FMPreemphasisFilterBlock](#fmpreemphasisfilterblock)
-        * [HighpassFilterBlock](#highpassfilterblock)
-        * [IIRFilterBlock](#iirfilterblock)
-        * [LowpassFilterBlock](#lowpassfilterblock)
-        * [ManchesterMatchedFilterBlock](#manchestermatchedfilterblock)
-        * [RootRaisedCosineFilterBlock](#rootraisedcosinefilterblock)
-        * [SinglepoleHighpassFilterBlock](#singlepolehighpassfilterblock)
-        * [SinglepoleLowpassFilterBlock](#singlepolelowpassfilterblock)
-    * [Math Operations](#math-operations)
-        * [AbsoluteValueBlock](#absolutevalueblock)
-        * [AddBlock](#addblock)
-        * [AddConstantBlock](#addconstantblock)
-        * [ComplexConjugateBlock](#complexconjugateblock)
-        * [ComplexMagnitudeBlock](#complexmagnitudeblock)
-        * [ComplexPhaseBlock](#complexphaseblock)
-        * [MultiplyBlock](#multiplyblock)
-        * [MultiplyConjugateBlock](#multiplyconjugateblock)
-        * [MultiplyConstantBlock](#multiplyconstantblock)
-        * [SubtractBlock](#subtractblock)
-    * [Level Control](#level-control)
-        * [AGCBlock](#agcblock)
-        * [PowerSquelchBlock](#powersquelchblock)
-    * [Sample Rate Manipulation](#sample-rate-manipulation)
-        * [DecimatorBlock](#decimatorblock)
-        * [DownsamplerBlock](#downsamplerblock)
-        * [InterpolatorBlock](#interpolatorblock)
-        * [RationalResamplerBlock](#rationalresamplerblock)
-        * [UpsamplerBlock](#upsamplerblock)
-    * [Spectrum Manipulation](#spectrum-manipulation)
-        * [FrequencyTranslatorBlock](#frequencytranslatorblock)
-        * [HilbertTransformBlock](#hilberttransformblock)
-        * [TunerBlock](#tunerblock)
-    * [Carrier and Clock Recovery](#carrier-and-clock-recovery)
-        * [PLLBlock](#pllblock)
-        * [ZeroCrossingClockRecoveryBlock](#zerocrossingclockrecoveryblock)
-    * [Digital](#digital)
-        * [BinaryPhaseCorrectorBlock](#binaryphasecorrectorblock)
-        * [DifferentialDecoderBlock](#differentialdecoderblock)
-        * [ManchesterDecoderBlock](#manchesterdecoderblock)
-        * [PreambleSamplerBlock](#preamblesamplerblock)
-        * [SamplerBlock](#samplerblock)
-        * [SlicerBlock](#slicerblock)
-    * [Type Conversion](#type-conversion)
-        * [ComplexToFloatBlock](#complextofloatblock)
-        * [ComplexToImagBlock](#complextoimagblock)
-        * [ComplexToRealBlock](#complextorealblock)
-        * [FloatToComplexBlock](#floattocomplexblock)
-        * [RealToComplexBlock](#realtocomplexblock)
-    * [Miscellaneous](#miscellaneous)
-        * [DeinterleaveBlock](#deinterleaveblock)
-        * [DelayBlock](#delayblock)
-        * [InterleaveBlock](#interleaveblock)
-        * [NopBlock](#nopblock)
-        * [ThrottleBlock](#throttleblock)
-    * [Modulation](#modulation)
-        * [FrequencyModulatorBlock](#frequencymodulatorblock)
-        * [SSBModulator](#ssbmodulator)
-    * [Demodulation](#demodulation)
-        * [AMEnvelopeDemodulator](#amenvelopedemodulator)
-        * [AMSynchronousDemodulator](#amsynchronousdemodulator)
-        * [FrequencyDiscriminatorBlock](#frequencydiscriminatorblock)
-        * [NBFMDemodulator](#nbfmdemodulator)
-        * [SSBDemodulator](#ssbdemodulator)
-        * [WBFMMonoDemodulator](#wbfmmonodemodulator)
-        * [WBFMStereoDemodulator](#wbfmstereodemodulator)
-    * [Protocol](#protocol)
-        * [AX25FramerBlock](#ax25framerblock)
-        * [AX25FramerBlock.AX25FrameType](#ax25framerblockax25frametype)
-        * [IDMFramerBlock](#idmframerblock)
-        * [IDMFramerBlock.IDMFrameType](#idmframerblockidmframetype)
-        * [POCSAGDecoderBlock](#pocsagdecoderblock)
-        * [POCSAGDecoderBlock.POCSAGMessageType](#pocsagdecoderblockpocsagmessagetype)
-        * [POCSAGFramerBlock](#pocsagframerblock)
-        * [POCSAGFramerBlock.POCSAGFrameType](#pocsagframerblockpocsagframetype)
-        * [RDSDecoderBlock](#rdsdecoderblock)
-        * [RDSDecoderBlock.RDSPacketType](#rdsdecoderblockrdspackettype)
-        * [RDSFramerBlock](#rdsframerblock)
-        * [RDSFramerBlock.RDSFrameType](#rdsframerblockrdsframetype)
-        * [SCMFramerBlock](#scmframerblock)
-        * [SCMFramerBlock.SCMFrameType](#scmframerblockscmframetype)
-        * [SCMPlusFramerBlock](#scmplusframerblock)
-        * [SCMPlusFramerBlock.SCMPlusFrameType](#scmplusframerblockscmplusframetype)
-        * [VaricodeDecoderBlock](#varicodedecoderblock)
-    * [Receivers](#receivers)
-        * [AX25Receiver](#ax25receiver)
-        * [BPSK31Receiver](#bpsk31receiver)
-        * [ERTReceiver](#ertreceiver)
-        * [POCSAGReceiver](#pocsagreceiver)
-        * [RDSReceiver](#rdsreceiver)
-* [Infrastructure](#infrastructure)
-    * [Package](#package)
-    * [Basic Types](#basic-types)
-        * [ComplexFloat32](#complexfloat32)
-        * [Float32](#float32)
-        * [Bit](#bit)
-        * [Byte](#byte)
-    * [Type Factories](#type-factories)
-        * [CStructType](#cstructtype)
-        * [ObjectType](#objecttype)
-    * [Vector](#vector)
-        * [Vector](#vector-1)
-        * [ObjectVector](#objectvector)
-    * [Block](#block)
-        * [Input](#input)
-        * [Output](#output)
-        * [Block](#block-1)
-    * [Debug](#debug)
-    * [Platform](#platform)
+Generated from LuaRadio `v0.9.0`.
 
 ## Example
 
@@ -533,6 +368,47 @@ local src = radio.AirspySource(91.1e6, 2.5e6, {gain_mode = "sensitivity", sensit
 
 -- Source samples from 144.390 MHz sampled at 2.5 MHz, with bias tee enabled
 local src = radio.AirspySource(144.390e6, 2.5e6, {biastee_enable = true})
+```
+
+</div>
+--------------------------------------------------------------------------------
+
+<div class="block">
+#### BladeRFSource
+
+Source a complex-valued signal from a BladeRF. This source requires the
+libbladeRF library.
+
+##### `radio.BladeRFSource(frequency, rate[, options={}])`
+
+###### Arguments
+
+* `frequency` (*number*): Tuning frequency in Hz
+* `rate` (*number*): Sample rate in Hz
+* `options` (*table*): Additional options, specifying:
+    * `device_id` (string, default "")
+    * `channel` (int, default 0)
+    * `gain` (number in dB, manual gain, default nil)
+    * `bandwidth` (number in Hz, default 80% of sample rate)
+    * `autogain` (bool, default true if manual gain is nil)
+
+###### Type Signatures
+
+* ❑➔ `out` *ComplexFloat32*
+
+###### Example
+
+``` lua
+-- Source samples from a BladeRF at 91.1 MHz sampled at 2 MHz
+local src = radio.BladeRFSource(91.1e6, 2e6)
+
+-- Source samples from a BladeRF at 915 MHz sampled at 10 MHz, with 20 dB
+-- overall gain
+local src = radio.BladeRFSource(915e6, 10e6, {gain = 20})
+
+-- Source samples from a BladeRF at 144.390 MHz sampled at 8 MHz, with
+-- 2.5 MHz baseband bandwidth
+local src = radio.BladeRFSource(144.390e6, 8e6, {bandwidth = 2.5e6})
 ```
 
 </div>
@@ -1257,12 +1133,13 @@ Report the average rate of samples delivered to the sink.
 ...
 ```
 
-##### `radio.BenchmarkSink([file=io.stderr, use_json=false])`
+##### `radio.BenchmarkSink([file=io.stderr, use_json=false, title="BenchmarkSink"])`
 
 ###### Arguments
 
 * `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
 * `use_json` (*bool*): Serialize aggregate results in JSON on termination
+* `title` (*string*): Title in reporting
 
 ###### Type Signatures
 
@@ -1278,6 +1155,41 @@ top:connect(src, snk)
 -- Benchmark a source and a block, writing final results in JSON to fd 3
 local snk = radio.BenchmarkSink(3, true)
 top:connect(src, blk, snk)
+```
+
+</div>
+--------------------------------------------------------------------------------
+
+<div class="block">
+#### BladeRFSink
+
+Sink a complex-valued signal to a BladeRF. This sink requires the libbladeRF
+library.
+
+##### `radio.BladeRFSink(frequency[, options={}])`
+
+###### Arguments
+
+* `frequency` (*number*): Tuning frequency in Hz
+* `options` (*table*): Additional options, specifying:
+    * `device_id` (string, default "")
+    * `channel` (int, default 0)
+    * `gain` (number in dB, manual gain, default nil)
+    * `bandwidth` (number in Hz, default 80% of sample rate)
+    * `autogain` (bool, default true if manual gain is nil)
+
+###### Type Signatures
+
+* `in` *ComplexFloat32* ➔❑
+
+###### Example
+
+``` lua
+-- Sink samples to a BladeRF at 433.92 MHz
+local snk = radio.BladeRFSink(433.92e6)
+
+-- Sink samples to a BladeRF at 915 MHz, with 10 dB overall gain and 5 MHz baseband bandwidth
+local snk = radio.BladeRFSink(915e6, {gain = 10, bandwidth = 5e6})
 ```
 
 </div>
@@ -1749,11 +1661,12 @@ Sink a signal to a file, formatted as a string. Samples are formatted
 individually and newline delimited. This sink accepts any data type that
 implements `__tostring()`.
 
-##### `radio.PrintSink([file=io.stdout])`
+##### `radio.PrintSink([file=io.stdout, title=""])`
 
 ###### Arguments
 
 * `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
+* `title` (*string*): Title in reporting
 
 ###### Type Signatures
 
@@ -2361,6 +2274,38 @@ $$ h_{-mf}[n] = \begin{cases} +1 & 0 \le n \lt T \\ -1 & T \le n \lt 2T \end{cas
 ``` lua
 -- Manchester coded matched filter with 32768 baudrate
 local matched_filter = radio.ManchesterMatchedFilterBlock(32768)
+```
+
+</div>
+--------------------------------------------------------------------------------
+
+<div class="block">
+#### PulseMatchedFilterBlock
+
+Correlate a real valued signal with a matched filter of a pulse width of the
+specified symbol rate. The resulting signal will have positive peaks at
+positive pulses and negative peaks at negative pulses.
+
+$$ y[n] = (x * h_{mf})[n] $$
+
+$$ h_{-mf}[n] = \begin{cases} 1 & 0 \le n \lt T \\ 0 & \text{otherwise} \end{cases} $$
+
+##### `radio.PulseMatchedFilterBlock(baudrate[, invert=false])`
+
+###### Arguments
+
+* `baudrate` (*number*): Symbol baudrate in Hz
+* `invert` (*bool*): Invert matched filter
+
+###### Type Signatures
+
+* `in` *Float32* ➔❑➔ `out` *Float32*
+
+###### Example
+
+``` lua
+-- Pulse matched filter with 32768 baudrate
+local matched_filter = radio.PulseMatchedFilterBlock(32768)
 ```
 
 </div>
@@ -3611,6 +3556,73 @@ $$ y[n] = e^{j 2 \pi k \sum x[n]} $$
 ``` lua
 -- Frequency modulator with modulation index 0.2
 local fm_mod = radio.FrequencyModulatorBlock(0.2)
+```
+
+</div>
+--------------------------------------------------------------------------------
+
+<div class="block">
+#### PulseAmplitudeModulatorBlock
+
+Pulse amplitude modulate bits into a baseband real-valued signal. The
+resulting signal is non-return-to-zero, bipolar, with normalized energy.
+
+$$ y[n] = \text{PAM}(x[n], \text{symbol_rate}, \text{sample_rate}, \text{levels}) $$
+
+##### `radio.PulseAmplitudeModulatorBlock(symbol_rate, sample_rate, levels[, options={}])`
+
+###### Arguments
+
+* `symbol_rate` (*number*): Symbol rate in Hz
+* `sample_rate` (*number*): Sample rate in Hz
+* `levels` (*number*): Number of amplitude levels (must be power of 2)
+* `options` (*table*): Additional options, specifying:
+    * `msb_first` (boolean, default true)
+    * `amplitudes` (table, mapping of symbol value
+      to amplitude)
+
+###### Type Signatures
+
+* `in` *Bit* ➔❑➔ `out` *Float32*
+
+###### Example
+
+``` lua
+-- 4-PAM modulator with 1200 Hz symbol rate, 96 kHz sample rate
+local modulator = radio.PulseAmplitudeModulatorBlock(1200, 96000, 4)
+```
+
+</div>
+--------------------------------------------------------------------------------
+
+<div class="block">
+#### QuadratureAmplitudeModulatorBlock
+
+Quadrature amplitude modulate bits into a baseband complex-valued signal.
+
+$$ y[n] = \text{QAM}(x[n], \text{symbol_rate}, \text{sample_rate}, \text{points}) $$
+
+##### `radio.QuadratureAmplitudeModulatorBlock(symbol_rate, sample_rate, points[, options={}])`
+
+###### Arguments
+
+* `symbol_rate` (*number*): Symbol rate in Hz
+* `sample_rate` (*number*): Sample rate in Hz
+* `points` (*number*): Number of constellation points (must be power of 2)
+* `options` (*table*): Additional options, specifying:
+    * `msb_first` (boolean, default true)
+    * `constellation` (table, mapping of symbol
+      value to complex amplitude)
+
+###### Type Signatures
+
+* `in` *Bit* ➔❑➔ `out` *ComplexFloat32*
+
+###### Example
+
+``` lua
+-- 4-QAM modulator with 1200 Hz symbol rate, 96 kHz sample rate
+local modulator = radio.QuadratureAmplitudeModulatorBlock(1200, 96000, 4)
 ```
 
 </div>
@@ -5710,6 +5722,20 @@ Resize the vector.
 ##### `Vector:append(elem)`
 
 Append an element to the vector.
+
+###### Arguments
+
+* `elem`: Element
+
+###### Returns
+
+* self (*Vector*)
+
+</div>
+<div class="function">
+##### `Vector:fill(elem)`
+
+Fill a vector with an element.
 
 ###### Arguments
 
