docs/architecture: update with PipeMux and ControlSocket

--- a/docs/5.architecture.md
+++ b/docs/5.architecture.md
@@ -450,28 +450,44 @@ block inputs, but every block input only has one `Pipe` object.
 
 The `Pipe` object provides an interface for the serialization and
 deserialization of sample vectors between blocks.  The `read()` method reads a
-vector from the pipe. The `write()` method writes a vector to the pipe.
+sample vector from the pipe. The `write()` method writes a sample vector to the
+pipe.
+
+Each block also has a `ControlSocket` object, which provides an out-of-band
+interface for block shutdown by the parent process, and in the future, will
+allow the block to receive asynchronous control messages.
+
+Both `Pipe` and `ControlSocket` objects use `socketpair()` for IPC.
 
 A block is run with its `run()` method, which is a loop that repeatedly reads
 input pipes into an array of vectors, calls `process(...)` with these input
 vectors, and writes the resulting array of vectors to the output pipes.
 
-Code reference: [Block class](../radio/core/block.lua).
+The `run()` method uses a `PipeMux` object to handle polling and reading from
+all input pipes and from the `ControlSocket`. The `PipeMux` `read()` method
+uses the `poll()` system call to wait for new data at the block's inputs, and
+then reads and returns an array of deserialized sample vectors. It also detects
+EOF on any input pipes, indicating flow graph collapse, or EOF on the
+`ControlSocket`, indicating a shutdown event.
+
+Code reference: [Block class](../radio/core/block.lua), [PipeMux class](../radio/core/pipe.lua).
 
 #### Termination
 
-A block runs indefinitely in its `run()` method, until a `read()` on one of the
-input `Pipe` objects returns `nil`. This indicates that the upstream block
-closed its output `Pipe` and that the flow graph is collapsing.
+A block runs indefinitely in its `run()` method, until one of the input `Pipe`
+objects reads EOF, indicating that the upstream block closed its output `Pipe`
+and that the flow graph is collapsing, or until the `ControlSocket` reads EOF,
+indicating that the parent process closed its end of the `ControlSocket` and
+the flow graph is shutting down.
 
-When an input `Pipe` returns `nil`, the block breaks its main run loop, calls
-`cleanup()`, and then closes its output pipes. This causes the downstream
-blocks to terminate similarly.
+When a read from `PipeMux` returns an EOF or shutdown event, the block breaks
+its main run loop, calls `cleanup()`, and then closes its output pipes.  This
+causes the downstream blocks to terminate similarly.
 
 Sources that produce a finite number of samples will exit naturally after they
 have produced all of their samples, triggering the collapse of the flow graph.
-Sources that run indefinitely, on the other hand, can only be shutdown by the
-framework forcibly by the `SIGINT` signal.
+Sources that run indefinitely, on the other hand, can only be shutdown when the
+parent process closes their `ControlSocket` to the source.
 
 A block shutdown does not mean samples are lost. Samples are buffered in the
 underlying implementation of the `Pipe`, even after the producing block has
@@ -579,6 +595,10 @@ rate, so `initialize()` is called on each block in the flow graph, including
 hierarchical blocks, to carry out any block-specific initialization before
 running.
 
+Each block is then assigned a `ControlSocket` object, which provides an
+out-of-band mechanism for the parent process to shutdown blocks, and in the
+near future, an asynchronous control interface to each block.
+
 Finally, all of the `Pipe` objects that connect the `OutputPort` and
 `InputPort` of the blocks in the flow graph are initialized. Each `Pipe`
 creates an anonymous UNIX socket pair and pre-allocates a read buffer.
@@ -607,7 +627,7 @@ and exits with exit code 1.
 
 The parent process closes all file descriptors associated with the `Pipe`
 objects it built, so that the blocks are the only owners of these connected
-files, and can close them to signal block termination.
+files, and can close them to signal flow graph collapse.
 
 The parent returns back to the top-level script, where it can use `status()` to
 get the running status of the flow graph, `wait()` to wait for the flow graph
@@ -624,10 +644,12 @@ user requested exit, it calls `stop()` to stop the flow graph. If it gets a
 with `waitpid()` until the flow graph has fully collapsed, and then unblocks
 the `SIGINT` and `SIGCHLD` signals.
 
-The [`stop()`](0.reference-manual.md#compositeblockstop) method kills all
-source blocks with `SIGTERM`, waits on each block PID with `waitpid()` until
-the flow graph has fully collapsed, and then unblocks the `SIGINT` and
-`SIGCHLD` signals.
+The [`stop()`](0.reference-manual.md#compositeblockstop) method shuts down all
+blocks in the flow graph by closing every block's `ControlSocket`, and waits on
+each block PID with `waitpid()` until the flow graph has fully collapsed, and
+then unblocks the `SIGINT` and `SIGCHLD` signals. If a block process does not
+shutdown within a timeout (100ms), it is forcibly killed with a `SIGTERM`
+signal.
 
 The [`status()`](0.reference-manual.md#compositeblockstatus) method checks if
 any block is still running with `kill(<pid>, 0)`.  If all blocks have exited,
