docs: regenerate reference manual for v0.10.0

--- a/docs/0.reference-manual.md
+++ b/docs/0.reference-manual.md
@@ -1,6 +1,6 @@
 # LuaRadio Reference Manual
 
-Generated from LuaRadio `v0.9.1`.
+Generated from LuaRadio `v0.10.0`.
 
 ## Table of contents
 
@@ -942,8 +942,8 @@ the librtlsdr library.
     * `biastee` (bool, default false)
     * `direct_sampling` (string, default "disabled", choice of "disabled", "i", "q")
     * `bandwidth` (number, default equal to sample rate)
-    * `autogain` (bool, default false)
-    * `rf_gain` (number, default closest supported to 10.0 dB)
+    * `autogain` (bool, default true if manual gain is nil)
+    * `rf_gain` (number in dB, manual gain, default nil)
     * `freq_correction` PPM (number, default 0.0)
     * `device_index` (integer, default 0)
 
@@ -968,8 +968,8 @@ local src = radio.RtlSdrSource(144.390e6, 1e6, {rf_gain = 15.0})
 
 #### SDRplaySource
 
-Source a complex-valued signal from an SDRplay RSP. This source requires the
-libmirsdrapi-rsp library.
+Source a complex-valued signal from an SDRplay RSP (1, 1A, 2, Duo, or Dx).
+This source requires the libsdrplay_api or libmirsdrapi-rsp library.
 
 ##### `radio.SDRplaySource(frequency, rate[, options={}])`
 
@@ -978,7 +978,7 @@ libmirsdrapi-rsp library.
 * `frequency` (*number*): Tuning frequency in Hz
 * `rate` (*number*): Sample rate in Hz
 * `options` (*table*): Additional options, specifying:
-    * `gain_reduction` (int, default 80 dB, range of 0 to 102 dB)
+    * `gain_reduction` (int, default 40 dB, range of 20 to 59 dB)
     * `bandwidth` (number, default closest, choice of 0.200 MHz, 0.300 MHz,
       0.600 MHz, 1.536 MHz, 5.000 MHz, 6.000 MHz, 7.000 MHz, 8.000 MHz)
 
@@ -995,8 +995,8 @@ local src = radio.SDRplaySource(91.1e6, 2e6)
 -- Source samples from 144.390 MHz sampled at 4 MHz, with 0.6 MHz bandwidth
 local src = radio.SDRplaySource(144.390e6, 4e6, {bandwidth = 0.6e6})
 
--- Source samples from 15 MHz sampled at 10 MHz, with 75 dB gain reduction
-local src = radio.SDRplaySource(15e6, 10e6, {gain_reduction = 75})
+-- Source samples from 15 MHz sampled at 10 MHz, with 30 dB gain reduction
+local src = radio.SDRplaySource(15e6, 10e6, {gain_reduction = 30})
 ```
 
 --------------------------------------------------------------------------------
@@ -1101,10 +1101,10 @@ library.
 * `rate` (*number*): Sample rate in Hz
 * `options` (*table*): Additional options, specifying:
     * `channel` (int, default 0)
-    * `gain` (number in dB, overall gain, default 15.0 dB)
+    * `gain` (number in dB, manual overall gain, default nil)
     * `bandwidth` (number in Hz)
     * `antenna` (string)
-    * `autogain` (bool, default false)
+    * `autogain` (bool, default true if manual gain is nil)
     * `gains` (table, gain element name to value in dB)
 
 ###### Type Signatures
@@ -1750,12 +1750,14 @@ Sink a signal to a file, formatted as a string. Samples are formatted
 individually and newline delimited. This sink accepts any data type that
 implements `__tostring()`.
 
-##### `radio.PrintSink([file=io.stdout, title=""])`
+##### `radio.PrintSink([file=io.stdout, options={}])`
 
 ###### Arguments
 
 * `file` (*string*\|*file*\|*int*): Filename, file object, or file descriptor
-* `title` (*string*): Title in reporting
+* `options` (*table*): Additional options, specifying:
+    * `title` (string, default nil)
+    * `timestamp` (bool, default false)
 
 ###### Type Signatures
 
@@ -4362,15 +4364,14 @@ modulated complex-valued signal.
 
 ###### Type Signatures
 
-* `in` *ComplexFloat32* ➔❑➔ `out` *RDSFrameType*
+* `in` *ComplexFloat32* ➔❑➔ `out` *RDSPacketType*
 
 ###### Example
 
 ``` lua
 local receiver = radio.RDSReceiver()
-local decoder = radio.RDSDecoderBlock()
 local snk = radio.JSONSink()
-top:connect(src, receiver, decoder, snk)
+top:connect(src, receiver, snk)
 ```
 
 --------------------------------------------------------------------------------
@@ -5555,7 +5556,7 @@ self:add_type_signature(inputs, outputs)
 
 #### Output
 
-##### `radio.block.Output(name, data_type|str)`
+##### `radio.block.Output(name, data_type)`
 
 Block output port descriptor. This contains the name and data type of
 a block output port.
@@ -5563,7 +5564,7 @@ a block output port.
 ###### Arguments
 
 * `name` (*string*): Name
-* `data_type|str` (*type*): Data type, e.g. `radio.types.ComplexFloat32`, or "copy" to copy input data type
+* `data_type` (*type*\|*str*): Data type, e.g. `radio.types.ComplexFloat32`, or "copy" to copy input data type
 
 ###### Example
 
