Update installation instructions for Ubuntu

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -42,7 +42,8 @@ Install LuaJIT 2.0.4 or greater and prerequisites:
 * Arch Linux: `sudo pacman -S luajit`
 * macOS (Homebrew): `brew install luajit pkg-config`
 * macOS (MacPorts): `sudo port install luajit pkg-config`
-* Ubuntu/Debian/Rasbpian: `sudo apt-get install luajit pkg-config`
+* Ubuntu: `sudo apt-get install luajit libluajit-5.1-dev pkg-config`
+* Debian/Rasbpian: `sudo apt-get install luajit pkg-config`
 * Fedora/CentOS: `sudo yum install luajit`
 
 ### Installation
