--- a/docs/0.reference-manual.md
+++ b/docs/0.reference-manual.md
@@ -1,6 +1,6 @@
 # LuaRadio Reference Manual
 
-Generated from LuaRadio `v0.10.0`.
+Generated from LuaRadio `v0.11.0`.
 
 ## Table of contents
 
@@ -409,6 +409,10 @@ end
 
 Stop a top-level block and wait until it has finished.
 
+###### Returns
+
+* Successful exit (*bool*)
+
 ###### Example
 
 ``` lua
@@ -423,13 +427,17 @@ top:stop()
 Wait for a top-level block to finish, either by natural termination or by
 `SIGINT`.
 
+###### Returns
+
+* Successful exit (*bool*)
+
 ###### Example
 
 ``` lua
 -- Start a top-level block
 top:start()
 -- Wait for the top-level block to finish
-top:wait()
+local success = top:wait()
 ```
 
 --------------------------------------------------------------------------------
