website: regenerate reference manual for v0.11.0

--- a/website/_includes/0.reference-manual.md
+++ b/website/_includes/0.reference-manual.md
@@ -1,6 +1,6 @@
 # LuaRadio Reference Manual
 
-Generated from LuaRadio `v0.10.0`.
+Generated from LuaRadio `v0.11.0`.
 
 ## Example
 
@@ -249,6 +249,10 @@ end
 
 Stop a top-level block and wait until it has finished.
 
+###### Returns
+
+* Successful exit (*bool*)
+
 ###### Example
 
 ``` lua
@@ -265,13 +269,17 @@ top:stop()
 Wait for a top-level block to finish, either by natural termination or by
 `SIGINT`.
 
+###### Returns
+
+* Successful exit (*bool*)
+
 ###### Example
 
 ``` lua
 -- Start a top-level block
 top:start()
 -- Wait for the top-level block to finish
-top:wait()
+local success = top:wait()
 ```
 
 </div>
