Adding support for HydraSDR RFOne upgrading the AirSpy R2

--- a/docs/0.reference-manual.md
+++ b/docs/0.reference-manual.md
@@ -16,6 +16,7 @@ Generated from LuaRadio `v0.11.0`.
         * [AirspySource](#airspysource)
         * [BladeRFSource](#bladerfsource)
         * [HackRFSource](#hackrfsource)
+        * [HydraSDRSource](#hydrasdrsource)
         * [IQFileSource](#iqfilesource)
         * [JSONSource](#jsonsource)
         * [NetworkClientSource](#networkclientsource)
@@ -608,6 +609,52 @@ local src = radio.HackRFSource(91.1e6, 8e6, {lna_gain = 16, vga_gain = 22})
 
 -- Source samples from 144.390 MHz sampled at 8 MHz, with antenna power enabled
 local src = radio.HackRFSource(144.390e6, 8e6, {antenna_power_enable = true})
+```
+
+#### HydraSDRSource
+
+Source a complex-valued signal from an HydraSDR. This source requires the
+libhydrasdr library. The HydraSDR RFOne is supported.
+
+##### `radio.HydraSDRSource(frequency, rate[, options={}])`
+
+###### Arguments
+
+* `frequency` (*number*): Tuning frequency in Hz
+* `rate` (*number*): Sample rate in Hz (2.5 MHz or 10 MHz for HydraSDR RFOne)
+* `options` (*table*): Additional options, specifying:
+    * `gain_mode` (string, default "linearity", choice of "custom", "linearity", "sensitivity")
+    * `lna_gain` (int, default 5 dB, for custom gain mode, range 0 to 15 dB)
+    * `mixer_gain` (int, default 1 dB, for custom gain mode, range 0 to 15 dB)
+    * `vga_gain` (int, default 5 dB, for custom gain mode, range 0 to 15 dB)
+    * `lna_agc` (bool, default false, for custom gain mode)
+    * `mixer_agc` (bool, default false, for custom gain mode)
+    * `linearity_gain` (int, default 10, for linearity gain mode, range 0 to 21)
+    * `sensitivity_gain` (int, default 10, for sensitivity gain mode, range 0 to 21)
+    * `biastee_enable` (bool, default false)
+
+###### Type Signatures
+
+* ❑➔ `out` *ComplexFloat32*
+
+###### Example
+
+``` lua
+-- Source samples from 135 MHz sampled at 6 MHz
+local src = radio.HydraSDRSource(135e6, 6e6)
+
+-- Source samples from 91.1 MHz sampled at 3 MHz, with custom gain settings
+local src = radio.HydraSDRSource(91.1e6, 3e6, {gain_mode = "custom", lna_gain = 4,
+                                             mixer_gain = 1, vga_gain = 6})
+
+-- Source samples from 91.1 MHz sampled at 2.5 MHz, with linearity gain mode
+local src = radio.HydraSDRSource(91.1e6, 2.5e6, {gain_mode = "linearity", linearity_gain = 8})
+
+-- Source samples from 91.1 MHz sampled at 2.5 MHz, with sensitivity gain mode
+local src = radio.HydraSDRSource(91.1e6, 2.5e6, {gain_mode = "sensitivity", sensitivity_gain = 8})
+
+-- Source samples from 144.390 MHz sampled at 2.5 MHz, with bias tee enabled
+local src = radio.HydraSDRSource(144.390e6, 2.5e6, {biastee_enable = true})
 ```
 
 --------------------------------------------------------------------------------
