--- a/docs/8.applications.md
+++ b/docs/8.applications.md
@@ -68,6 +68,7 @@ Supported Inputs:
   airspyhf              airspyhf
   bladerf               bladerf
   hackrf                hackrf
+  hydrasdr              hydrasdr
   sdrplay               sdrplay
   uhd                   uhd:<device>
   soapysdr              soapysdr:<driver>,<rate>
