--- a/docs/7.supported-hardware.md
+++ b/docs/7.supported-hardware.md
@@ -12,9 +12,9 @@ high speed interfaces.
 * [Airspy R2 and Mini](http://airspy.com/) with [`AirspySource`](0.reference-manual.md#airspysource) via [libairspy](https://github.com/airspy/airspyone_host)
 * [Airspy HF+ Dual Port and Discovery](http://airspy.com/) with [`AirspyHFSource`](0.reference-manual.md#airspyhfsource) via [libairspyhf](https://github.com/airspy/airspyhf)
 * [HackRF One](https://greatscottgadgets.com/hackrf/) with [`HackRFSource`](0.reference-manual.md#hackrfsource) via [libhackrf](https://github.com/mossmann/hackrf)
+* [HydraSDR RFOne](https://hydrasdr.com/) with [`HydraSDRSource`](0.reference-manual.md#hydrasdrsource) via [libhydrasdr](https://github.com/hydrasdr/rfone_host)
 * [SDRplay RSP](http://sdrplay.com/) with [`SDRplaySource`](0.reference-manual.md#sdrplaysource) via [libmirsdrapi-rsp](https://www.sdrplay.com/downloads/)
 * [USRP](https://www.ettus.com/) with [`UHDSource`](0.reference-manual.md#uhdsource) via [libuhd](https://github.com/EttusResearch/uhd)
-
 * [BladeRF](https://www.nuand.com/) with [`BladeRFSource`](0.reference-manual.md#bladerfsource) via [libbladeRF](https://github.com/Nuand/bladeRF/tree/master/host/libraries/libbladeRF)
 
 ### Sinks
@@ -22,7 +22,6 @@ high speed interfaces.
 * [SoapySDR](https://github.com/pothosware/SoapySDR/wiki) with [`SoapySDRSink`](0.reference-manual.md#soapysdrsink) via [libSoapySDR](https://github.com/pothosware/SoapySDR)
 * [HackRF One](https://greatscottgadgets.com/hackrf/) with [`HackRFSink`](0.reference-manual.md#hackrfsink) via [libhackrf](https://github.com/mossmann/hackrf)
 * [USRP](https://www.ettus.com/) with [`UHDSink`](0.reference-manual.md#uhdsink) via [libuhd](https://github.com/EttusResearch/uhd)
-
 * [BladeRF](https://www.nuand.com/) with [`BladeRFSink`](0.reference-manual.md#bladerfsink) via [libbladeRF](https://github.com/Nuand/bladeRF/tree/master/host/libraries/libbladeRF)
 
 ## Sound card SDR Sources and Sinks
