Adding an extra sample rate for HydraSDR RFOne

--- a/docs/0.reference-manual.md
+++ b/docs/0.reference-manual.md
@@ -621,7 +621,7 @@ libhydrasdr library. The HydraSDR RFOne is supported.
 ###### Arguments
 
 * `frequency` (*number*): Tuning frequency in Hz
-* `rate` (*number*): Sample rate in Hz (2.5 MHz or 10 MHz for HydraSDR RFOne)
+* `rate` (*number*): Sample rate in Hz (2.5 MHz, 5 MHz, or 10 MHz for HydraSDR RFOne)
 * `options` (*table*): Additional options, specifying:
     * `gain_mode` (string, default "linearity", choice of "custom", "linearity", "sensitivity")
     * `lna_gain` (int, default 5 dB, for custom gain mode, range 0 to 15 dB)
